# term-ddakong

./: .clang-tidy  .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  Makefile.util  README.org  TODOs.org  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
doc/: PLUGIN-API.org
examples/random-phrase-dll/: Makefile.in  autogen.sh  config.h.in  configure  configure.ac  libtool
examples/random-phrase-dll/src/: Makefile.am  Makefile.in  dllmain.c  im_handler.c
include/: cc_nanny.h  err.h  fd_io.h  global_flags.h  hangeul.h  im_handler.h  pty_.h  sig.h  termios_.h  typedef_.h  utf8_.h  winsz.h
plugins/lua/: .gitignore  02-lua-5.4.7-src-Makefile.patch  Makefile.am  Makefile.in  Makefile.lua-patch  config.h.in  configure  configure.ac  libtool  lua-5.4.7-src-Makefile.patch
plugins/lua/examples/: passthru.lua
plugins/lua/lua-5.4.7/src/: Makefile
plugins/lua/src/: Makefile.am  Makefile.in  dllmain.c  extern_.h  lua_binding.h  lua_binding__err.c  lua_binding__err.h  lua_binding__g.c  lua_binding__g.h  lua_binding__input_handler.c  lua_binding__input_handler.h  lua_binding__posix.c  lua_binding__posix.h  lua_binding__utf8.c  lua_binding__utf8.h  lua_binding_build.c  plugin-api.h  wordexp_.c  wordexp_.h
plugins/random-phrase/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  libtool
plugins/random-phrase/src/: Makefile.am  Makefile.in  dllmain.c  im_handler.c  plugin-api.h
src/: Makefile.am  Makefile.in  cc_nanny.h  err.c  err.h  extern_.h  fd_io.c  fd_io.h  getopt_.c  global_flags.h  hangeul.c  hangeul.h  hangeul_tables.c  im_handler.c  im_handler.h  im_handler_hangeul.c  im_handler_hangeul.h  main_ddakong.c  perror_.h  plugin.c  plugin.h  plugin_func_registry.c  pollfd.c  pollfd.h  pollfd__kqueue.c  pollfd__kqueue.h  pollfd__linux_epoll.c  pollfd__linux_epoll.h  pollfd__select.c  pollfd__select.h  preedit.c  preedit.h  pty_.c  pty_.h  sig.c  sig.h  termios_.c  termios_.h  typedef_.h  utf8_.c  (+3 more)
